refactor: build on top of liberica glibc